--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>pom</packaging>
   
   <modules>
+  		<module>primitives</module>
         <module>arrays</module>
         <module>strings</module>
   </modules>
