Fix all pom files

--- a/arrays/pom.xml
+++ b/arrays/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>arrays</artifactId>
     <name>Chapter 5: Arrays</name>
-
+	
+	<dependencies>
+        <dependency>
+            <groupId>ArfanR</groupId>
+            <artifactId>utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    
 </project>
