--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>linkedlists</module>
         <module>stacksandqueues</module>
         <module>binarytrees</module>
+        <module>binarysearchtrees</module>
   </modules>
   
   <build>
